--- a/framework/html5-template/index.html
+++ b/framework/html5-template/index.html
@@ -25,6 +25,7 @@
         <p>Hello world! This is HTML5 Boilerplate.</p>
 
         <script src="js/vendor/jquery-1.10.2.min.js"></script>
+        <script src="js/vendor/underscore-min.js"></script>
         <!--<script src="js/plugins/plugins.js"></script>-->
         <script type="text/javascript">
 
