--- a/framework/html5-mobile-template/index.html
+++ b/framework/html5-mobile-template/index.html
@@ -51,6 +51,7 @@
         <!-- Add your site or application content here -->
 
         <script src="js/vendor/jquery-2.1.0.min.js"></script>
+        <script src="js/vendor/underscore-min.js"></script>
         <!--<script src="js/plugins/"></script>-->
         <script type="text/javascript">
 
