--- a/test_old/index.html
+++ b/test_old/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
         <meta http-equiv="cleartype" content="on">
 
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/touch/apple-touch-icon-144x144-precomposed.png">
@@ -42,27 +42,21 @@
         <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
         -->
 
-        <!--<link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">-->
-        <link rel="stylesheet" href="css/jquery.mobile-1.4.5.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
     </head>
     <body>
 
-        <form action="" method="post">
-            <input name="name" />
-            <button type="submit">ok</button>
-        </form>
-
-        <script src="js/vendor/jquery-2.1.0.min.js"></script>
-        <script src="js/vendor/jquerymobile.js"></script>
-        <script src="js/vendor/underscore-min.js"></script>
-        <!--<script src="js/plugins/"></script>-->
-        <script src="js/main.js"></script>
-        <script type="text/javascript">
+<input id="y" />
 
 
-//console.log($('div[aid="1,2"]').html());
-        </script>
+
+
+        <!--<script src="js/vendor/jquery-2.1.0.min.js"></script>
+        <script src="js/vendor/ejs.min.js"></script>
+        <script src="js/vendor/underscore1.7(ext).js"></script>-->
+        <script src="js/bundle.min.js"></script>
+
     </body>
 </html>
