--- a/sfzl/designer/index.html
+++ b/sfzl/designer/index.html
@@ -545,7 +545,7 @@
                 COPYRIGHT © 2015 深圳同益新中控实业有限公司 ALL RIGHTS RESERVED 技术支持：富润电商PHONE:0755-22969785
             </div>
             <div class="fcompanyList">
-                <a href="http://www.tong1sun.com" target="_blank"><img src="../public/common/img/flogo.jpg"></a>
+                <a href="http://www.tong1sun.com" target="_blank"><img src="../public/common/img/flogo.png"></a>
                 <a href="http://www.baidu.com" target="_blank"><img src="../public/common/img/baidu.png"></a>
             </div>
         </div>
@@ -575,12 +575,12 @@
 </div>
 
     <script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="../public/common/js/jquery.SuperSlide.2.1.1.source.js"></script>
-    <link rel="stylesheet" href="../public/common/js/plugins/remodal/remodal.css">
-    <link rel="stylesheet" href="../public/common/js/plugins/remodal/remodal-default-theme.css">
+    <script type="text/javascript" src="../public/common/js/jquery.SuperSlide.2.1.1.source.min.js"></script>
+    <link rel="stylesheet" href="../public/common/js/plugins/remodal/remodal.min.css">
+    <link rel="stylesheet" href="../public/common/js/plugins/remodal/remodal-default-theme.min.css">
     <script src="../public/common/js/plugins/remodal/remodal.min.js"></script>
-    <script src="../public/common/js/com.js"></script>
-    <script src="../public/designer/index.js"></script>
+    <script src="../public/common/js/com.min.js"></script>
+    <script src="../public/designer/index.min.js"></script>
 
     
 </body>
