--- a/sfzl/factory/index.html
+++ b/sfzl/factory/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>丝纺之路</title>
-    <link rel="stylesheet" type="text/css" href="../public/common/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../public/common/css/style.min.css" />
 </head>
 
 <body>
@@ -209,6 +209,9 @@
                         <i></i>
                     </ul>
                 </div>
+                <a href="javascript:;" class="sortBtn">
+                    <span>排序</span><i></i>
+                </a>
 			</div>
 			<div class="search_wt">
                 <form>
@@ -226,7 +229,109 @@
 			</h3>
             <div class="list">
                 <div class="item">
-                    
+                    <a href="javascript:;" class="pic">
+                        <img src="../public/common/img/fa1.jpg">
+                    </a>
+                    <a href="javascript:;" class="falogo">
+                        <img src="../public/common/img/fi.jpg">
+                    </a>
+                    <a href="javascript:;" class="title">利括丝绸有限公司</a>
+                    <span class="s1">主营: 数码印花 </span>
+                    <div class="b">
+                        <a href="javascript:;" class="linkFaBtn">联系加工厂</a>
+                        <a href="javascript:;" class="goFaBtn">进入加工厂</a>
+                    </div>
+                    <div class="city">深圳</div>
+                </div>
+                <div class="item">
+                    <a href="javascript:;" class="pic">
+                        <img src="../public/common/img/fa1.jpg">
+                    </a>
+                    <a href="javascript:;" class="falogo">
+                        <img src="../public/common/img/fi.jpg">
+                    </a>
+                    <a href="javascript:;" class="title">利括丝绸有限公司</a>
+                    <span class="s1">主营: 数码印花 </span>
+                    <div class="b">
+                        <a href="javascript:;" class="linkFaBtn">联系加工厂</a>
+                        <a href="javascript:;" class="goFaBtn">进入加工厂</a>
+                    </div>
+                    <div class="city">深圳</div>
+                </div>
+                <div class="item">
+                    <a href="javascript:;" class="pic">
+                        <img src="../public/common/img/fa1.jpg">
+                    </a>
+                    <a href="javascript:;" class="falogo">
+                        <img src="../public/common/img/fi.jpg">
+                    </a>
+                    <a href="javascript:;" class="title">利括丝绸有限公司</a>
+                    <span class="s1">主营: 数码印花 </span>
+                    <div class="b">
+                        <a href="javascript:;" class="linkFaBtn">联系加工厂</a>
+                        <a href="javascript:;" class="goFaBtn">进入加工厂</a>
+                    </div>
+                    <div class="city">深圳</div>
+                </div>
+                <div class="item">
+                    <a href="javascript:;" class="pic">
+                        <img src="../public/common/img/fa1.jpg">
+                    </a>
+                    <a href="javascript:;" class="falogo">
+                        <img src="../public/common/img/fi.jpg">
+                    </a>
+                    <a href="javascript:;" class="title">利括丝绸有限公司</a>
+                    <span class="s1">主营: 数码印花 </span>
+                    <div class="b">
+                        <a href="javascript:;" class="linkFaBtn">联系加工厂</a>
+                        <a href="javascript:;" class="goFaBtn">进入加工厂</a>
+                    </div>
+                    <div class="city">深圳</div>
+                </div>
+                <div class="item">
+                    <a href="javascript:;" class="pic">
+                        <img src="../public/common/img/fa1.jpg">
+                    </a>
+                    <a href="javascript:;" class="falogo">
+                        <img src="../public/common/img/fi.jpg">
+                    </a>
+                    <a href="javascript:;" class="title">利括丝绸有限公司</a>
+                    <span class="s1">主营: 数码印花 </span>
+                    <div class="b">
+                        <a href="javascript:;" class="linkFaBtn">联系加工厂</a>
+                        <a href="javascript:;" class="goFaBtn">进入加工厂</a>
+                    </div>
+                    <div class="city">深圳</div>
+                </div>
+                <div class="item">
+                    <a href="javascript:;" class="pic">
+                        <img src="../public/common/img/fa1.jpg">
+                    </a>
+                    <a href="javascript:;" class="falogo">
+                        <img src="../public/common/img/fi.jpg">
+                    </a>
+                    <a href="javascript:;" class="title">利括丝绸有限公司</a>
+                    <span class="s1">主营: 数码印花 </span>
+                    <div class="b">
+                        <a href="javascript:;" class="linkFaBtn">联系加工厂</a>
+                        <a href="javascript:;" class="goFaBtn">进入加工厂</a>
+                    </div>
+                    <div class="city">深圳</div>
+                </div>
+                <div class="item">
+                    <a href="javascript:;" class="pic">
+                        <img src="../public/common/img/fa1.jpg">
+                    </a>
+                    <a href="javascript:;" class="falogo">
+                        <img src="../public/common/img/fi.jpg">
+                    </a>
+                    <a href="javascript:;" class="title">利括丝绸有限公司</a>
+                    <span class="s1">主营: 数码印花 </span>
+                    <div class="b">
+                        <a href="javascript:;" class="linkFaBtn">联系加工厂</a>
+                        <a href="javascript:;" class="goFaBtn">进入加工厂</a>
+                    </div>
+                    <div class="city">深圳</div>
                 </div>
             </div>
         </div>
@@ -322,7 +427,7 @@
                 COPYRIGHT © 2015 深圳同益新中控实业有限公司 ALL RIGHTS RESERVED 技术支持：富润电商PHONE:0755-22969785
             </div>
             <div class="fcompanyList">
-                <a href="http://www.tong1sun.com" target="_blank"><img src="../public/common/img/flogo.jpg"></a>
+                <a href="http://www.tong1sun.com" target="_blank"><img src="../public/common/img/flogo.png"></a>
                 <a href="http://www.baidu.com" target="_blank"><img src="../public/common/img/baidu.png"></a>
             </div>
         </div>
@@ -330,9 +435,9 @@
     <!--foot end-->
 
     <script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="../public/common/js/jquery.SuperSlide.2.1.1.source.js"></script>
-    <script src="../public/common/js/com.js"></script>
-    <script src="../public/factory/index.js"></script>
+    <script type="text/javascript" src="../public/common/js/jquery.SuperSlide.2.1.1.source.min.js"></script>
+    <script src="../public/common/js/com.min.js"></script>
+    <script src="../public/factory/index.min.js"></script>
 
     
 </body>
