--- a/sfzl/index/index.html
+++ b/sfzl/index/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>丝纺之路</title>
-	<link rel="stylesheet" type="text/css" href="../public/common/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="../public/common/css/style.min.css" />
 </head>
 
 <body id="index">
@@ -787,7 +787,7 @@
 				COPYRIGHT © 2015 深圳同益新中控实业有限公司 ALL RIGHTS RESERVED 技术支持：富润电商PHONE:0755-22969785
 			</div>
 			<div class="fcompanyList">
-				<a href="http://www.tong1sun.com" target="_blank"><img src="../public/common/img/flogo.jpg"></a>
+				<a href="http://www.tong1sun.com" target="_blank"><img src="../public/common/img/flogo.png"></a>
 				<a href="http://www.baidu.com" target="_blank"><img src="../public/common/img/baidu.png"></a>
 			</div>
 		</div>
@@ -796,8 +796,8 @@
 <!--foot end-->
 
 <script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
-<script type="text/javascript" src="../public/common/js/jquery.SuperSlide.2.1.1.source.js"></script>
-<script src="../public/common/js/com.js"></script>
-<script src="../public/index/index.js"></script>
+<script type="text/javascript" src="../public/common/js/jquery.SuperSlide.2.1.1.source.min.js"></script>
+<script src="../public/common/js/com.min.js"></script>
+<script src="../public/index/index.min.js"></script>
 </body>
 </html>
