--- a/sfzl/factory/detailList.html
+++ b/sfzl/factory/detailList.html
@@ -258,10 +258,42 @@
                     <a href="javascript:;" class="goFaBtn">进入加工厂</a>
                     <div class="r">
                         <span class="city">广东--深圳</span>
-                        <span class="faStatus">工厂状态：<i>可接新单</i></span>
+                        <span class="faStatus">工厂状态：<i class="orange">可接新单</i></span>
                     </div>
                 </div>
-                
+                <div class="item">
+                    <a href="javascript:;" class="pic">
+                        <img src="../public/common/img/fa1.jpg">
+                    </a>
+                    <a href="javascript:;" class="falogo">
+                        <img src="../public/common/img/fi.jpg">
+                    </a>
+                    <div class="b2">
+                        <a href="javascript:;" class="title">利括丝绸有限公司</a>
+                        <span class="s1">主营: 数码印花 </span>
+                        <span class="s2">地址：吴江盛泽平望镇临盛路29号 </span>
+                    </div>
+                    <div class="b3">
+                        <div class="box">
+                            <label>素绉缎</label><span class="price">￥50.00</span>
+                        </div>
+                        <div class="box">
+                            <label>柯根纱</label><span class="price">￥43.00</span>
+                        </div>
+                        <div class="box">
+                            <label>双 绉</label><span class="price">￥18.00<i>低价</i></span>
+                        </div>
+                        <div class="box">
+                            <label>弹力缎</label><span class="price">￥60.00</span>
+                        </div>
+                    </div>
+                    <a href="javascript:;" class="linkFaBtn">联系加工厂</a>
+                    <a href="javascript:;" class="goFaBtn">进入加工厂</a>
+                    <div class="r">
+                        <span class="city">广东--深圳</span>
+                        <span class="faStatus">工厂状态：<i class="red">工厂繁忙</i></span>
+                    </div>
+                </div>
             </div>
         </div>
         <!--list end-->
