--- a/sfzl/diy/faList.html
+++ b/sfzl/diy/faList.html
@@ -73,7 +73,7 @@
                 <div class="menu_main">
                     <ul class="nav_list clearfloat">
                         <li>
-                            <h3>半成品丝绸</h3>
+                            <h3>丝纺城</h3>
                             <div class="drop_box">
                                 <dl class="fore">
                                     <dt>
@@ -123,7 +123,7 @@
                             </div>
                         </li>
                         <li>
-                            <h3>花型设计师</h3>
+                            <h3>设计师之家</h3>
                             <div class="drop_box">3</div>
                         </li>
                         <li>
@@ -138,9 +138,9 @@
                 </div>
             </div>
             <ul class="menu_list">
-                <li><a href="#">半成品丝绸</a></li>
+                <li><a href="#">丝纺城</a></li>
                 <li><a href="#">DIY定制</a></li>
-                <li><a href="#">花型设计师</a></li>
+                <li><a href="#">设计师之家</a></li>
                 <li><a href="#">找工厂</a></li>
                 <li><a href="#">社区</a></li>
             </ul>
@@ -314,7 +314,7 @@
                             <a href="javascript:;">DIY定制</a>
                         </li>
                         <li>
-                            <a href="javascript:;">半成品丝绸</a>
+                            <a href="javascript:;">丝纺城</a>
                         </li>
                         <li>
                             <a href="javascript:;">找工厂</a>
