--- a/sfzl/shop/index.html
+++ b/sfzl/shop/index.html
@@ -33,22 +33,23 @@
 		<div class="w oh">
 			<a href="./index.html" class="logo" title="丝纺之路">	<img src="../public/common/css/image/logo.png">
 			</a>
-			<div class="b2">
-				<span class="shopName">蚕井丝绸专营店</span>
-				<span class="icon stars s3"></span>
+			<div class="logoR">
+				<div class="b2">
+					<span class="shopName">蚕井丝绸专营店</span>
+					<span class="icon stars s3"></span>
+				</div>
+				<a href="javascript:;" class="contactBtn">
+					联系店铺
+				</a>
 			</div>
-			<!-- <div class="selectbox">
+			<div class="selectbox">
 				<div class="search_wt">
-					<ul class="search_list">
-						<li class="on">商品</li>
-						<li>店铺</li>
-						<li>工厂</li>
-					</ul>
 					<div class="search_panel">
 						<form>
 							<div class="search_btnbox">
-								<button class="search_btn">搜索</button>
+								<button class="search_btn">搜全站</button>
 							</div>
+							<button class="searchOwnBtn">搜本站</button>
 							<div class="search_field">
 								<div class="search_inputwrap">
 									<input type="text" class="search_input" placeholder="请输入商品名称" />
@@ -57,18 +58,20 @@
 						</form>
 					</div>
 				</div>
-				<div class="search_info">
-					<a href="#" class="hot">丝巾</a>
-					<a href="#">家纺</a>
-					<a href="#">内衣</a>
-					<a href="#">衬衣</a>
-					<a href="#">床上用品</a>
-					<a href="#">弹力缎</a>
-					<a href="#">丝麻</a>
-					<a href="#">睡衣</a>
-				</div>
-			</div> -->
+			</div>
 			<a href="#" class="car_a">我的购物车（0）</a>
+		</div>
+	</div>
+	
+	<div class="shopLogoBox2">
+		<div class="w">
+			<div class="l">
+				<img src="../public/common/img/bdsc.png">
+			</div>
+			<div class="r">
+				<div class="gz"><span>25984564</span>人关注</div>
+				<a href="javascript:;" class="gzBtn"><i>+</i><span>关注</span></a>
+			</div>
 		</div>
 	</div>
 
@@ -86,7 +89,7 @@
 		</div>
 	</div>
 
-	<div id="shopIndexBox">
+	<div id="shopIndexBox" class="wrapperBox">
 	<!--lunbo-->
 	<div class="banner">
 		<div class="bannerbox">
@@ -302,7 +305,7 @@
 							<a href="javascript:;">DIY定制</a>
 						</li>
 						<li>
-							<a href="javascript:;">半成品丝绸</a>
+							<a href="javascript:;">丝纺城</a>
 						</li>
 						<li>
 							<a href="javascript:;">找工厂</a>
