--- a/sfzl/shop/detail.html
+++ b/sfzl/shop/detail.html
@@ -161,10 +161,97 @@
 				<a class="next" href="javascript:void(0)"></a> -->
             </div>
             <div class="detailInfo">
-                asdas
+                <h1 class="title">潮流花型设计真丝面料树枝花瓣礼服汉服面料J125-1#</h1>
+                <div class="priceBox">
+                	<div class="price"><i>￥</i>59.00</div>
+                	<div class="oldPrice"><i>￥</i>79.00</div>
+                </div>
+                <div class="b1">
+                	<div class="s s1">
+                		<label>销量</label>
+                		<span>82件</span>
+                	</div>
+                	<div class="s s2">
+                		<label>好评率</label>
+                		<span>85.71% (21人)</span>
+                	</div>
+                	<div class="s s3">
+                		<label>喜欢</label>
+                		<span>1237人</span>
+                	</div>
+                </div>
+                <div class="express info">
+                	<label>配送</label>
+                	<div class="c">
+                		<span class="s1">浙江杭州</span>
+                		<span class="s2">至</span>
+                		<span class="s3">广东深圳<i class="icon"></i></span>
+						<span class="s4">快递 免运费</span>
+                	</div>
+                </div>
+                <div class="gy info">
+                	<label>工艺幅宽</label>
+                	<div class="c">
+                		<a href="javascript:;" class="selBtn">传统108CM</a>
+                		<a href="javascript:;" class="selBtn">传统108CM</a>
+                	</div>
+                </div>
+                <div class="hd info">
+                	<label>厚度</label>
+                	<div class="c">
+                		<a href="javascript:;" class="selBtn">16m/m</a>
+                		<a href="javascript:;" class="selBtn">16m/m</a>
+                	</div>
+                </div>
+                <div class="num info">
+                	<label></label>
+                	<div class="c">
+                		<a href="javascript:;" class="minusBtn"></a>
+                		<input type="text" value="6" class="txtInput" />
+                		<a href="javascript:;" class="addBtn"></a>
+                		<span class="text">(库存8095件)</span>
+                	</div>
+                </div>
+                <div class="btnBox">
+                	<a href="javascript:;" class="cartBtn"></a>
+                	<a href="javascript:;" class="buyBtn"></a>
+                </div>
+                <div class="likeBox">
+                	<a href="javascript:;" class="likeBtn"><i class="icon"></i></a>
+                	<a href="javascript:;" class="shareBtn"><i class="icon"></i></a>
+                </div>
+                <a href="javascript:;" class="reportBtn">举报</a>
             </div>
             <div class="detailShop">
-                shop
+                <div class="logo">
+                	<div class="pic"><img src="../public/common/img/bdsc.jpg"></div>
+                	<div class="r">
+                		<h3>半岛丝绸专营店</h3>
+                		<span class="icon stars s4"></span>
+                	</div>
+                </div>
+                <ul class="info">
+                	<li>
+                		<label>所在地区：</label>
+                		<span>浙江杭州</span>
+                	</li>
+                	<li>
+                		<label>商品数量：</label>
+                		<span>112</span>
+                	</li>
+                	<li>
+                		<label>销售数量：</label>
+                		<span>25693</span>
+                	</li>
+                	<li>
+                		<label>店铺资质：</label>
+                		<span></span>
+                	</li>
+                </ul>
+                <div class="btnBox">
+                	<a href="javascript:;" class="sfbtn linkBtn">联系店铺</a>
+                	<a href="javascript:;" class="sfbtn goBtn">进入店铺</a>
+                </div>
             </div>
         </div>
         <!--recommend start-->
